# hermes-agent-desktop

./: .gitignore  .mcp.json  AGENTS.md  README.md  hermes_state.py  model_tools.py  package-lock.json  run_agent.py
.claude/: settings.json
desktop/backend/: .gitignore  desktop_backend.spec  pyproject.toml
desktop/backend/desktop_backend/: __main__.py  app.py  config.py
desktop/backend/desktop_backend/db/: connection.py  schema.py  ui_messages.py
desktop/backend/desktop_backend/overlays/: loader.py
desktop/backend/desktop_backend/readers/: auth_reader.py  hermes_config.py  model_catalog.py
desktop/backend/desktop_backend/routers/: analytics.py  commands.py  conversations.py  cron.py  events.py  model.py  overlays.py  plugins.py  state.py
desktop/backend/desktop_backend/schemas/: commands.py  conversation.py  cron.py  model.py  settings.py
desktop/backend/desktop_backend/services/: agent_execution_service.py  agent_pool.py  command_service.py  context_normalizer.py  dependencies.py  desktop_meta_service.py  event_bus.py  exceptions.py  interfaces.py  memory_files.py  merger.py  model_service.py  session_service.py  ui_message_service.py
desktop/backend/desktop_backend/store/: settings.py  state.py
desktop/backend/desktop_backend/util/: atomic_write.py
desktop/backend/scripts/: build_dist.sh  check_boundaries.sh
desktop/backend/tests/: test_boundary_grep.py
desktop/backend/tests/integration/: conftest.py  test_analytics.py  test_auth.py  test_bind_address.py  test_commands.py  test_conversations.py  test_cron_endpoints.py  test_model_endpoints.py  test_overlay_endpoints.py  test_settings_endpoints.py
desktop/backend/tests/unit/: test_agent_pool.py  test_atomic_write.py  test_command_service.py  test_config.py  test_context_normalizer.py  test_cron_reader.py  test_event_bus.py  test_filelock.py  test_hermes_config_reader.py  test_memory_router.py  test_memory_schema_parity.py  test_merger.py  test_model_catalog_reader.py  test_overlay_loader.py  test_plugins_router.py  test_schemas.py  test_session_service.py  test_store.py  test_ui_messages.py
desktop/sidecar/: .gitignore  daemon.spec  pyproject.toml
desktop/sidecar/daemon/: __main__.py  app.py  config.py
desktop/sidecar/daemon/db/: connection.py  conversation_turns.py  desktop_reset.py  schema.py  ui_messages.py  user_input_prompts.py
desktop/sidecar/scripts/: build_dist.sh  check_boundaries.sh
desktop/sidecar/tests/: conftest.py
desktop/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  hermes-desktop.desktop  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs  sidecar_tests.rs  updater.rs
(+992 files in other folders)
