[project]
name = "daemon"
version = "0.1.0"
description = "Hermes Desktop sidecar (FastAPI). Local 127.0.0.1 only."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.29,<1.0",
    "pydantic>=2.6,<3.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "curl-cffi>=0.7,<1.0",
    "hermes-agent[mcp]",
    "idna>=3.15,<4",
    "starlette>=1.0.1,<2",
]

[tool.uv.sources]
hermes-agent = { path = "../..", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "pyinstaller>=6.5",
]
build = ["pyinstaller==6.6.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["daemon*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
