[package]
name = "hermes-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermes_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "devtools", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
tracing = "0.1"
tokio = { version = "1.37", features = ["process", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
rand = "0.8"
anyhow = "1"
once_cell = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
futures-util = "0.3"
portable-pty = "0.9.0"
